--- a/index.html
+++ b/index.html
@@ -6,11 +6,13 @@
 </head>
 <body>
     <!--Container to wrap everything-->
-     <container>
+     <div id="container">
+         <header>
+             <img src="images/cliff_ocean.jpg" alt="Ocean View Cliff" width="1280" height="564">
         <div class="main-header"></div>
         <div class="logo"></div>
         <!--Brand of Website-->
-        <h3>Great Cliff's Logo</h3>
+        <img src="images/logo.png" alt="great cliffs Logo" width="125">
         <!--Main Navigation-->
         <nav class="Main-Menu">
         <ul>
@@ -20,7 +22,7 @@
             <li>Contact</li>
         </ul>
      </nav><!--End Main Navigation-->
-        
+    </header> 
      <!--Main Content-->
  <main>
      <h1>Introducing California's Greatest Cliffs</h1>
