Added contact form

--- a/contact.html
+++ b/contact.html
@@ -45,7 +45,7 @@
     <input type="text"name="phone"><br>
     <br><label>How should we contact you?</label><br>
     <input type="radio" name="contact" value="email"/>Email
-    <input type="radio" name="contact" value="phome"/>Phone <br/>
+    <input type="radio" name="contact" value="phone"/>Phone <br/>
     <br><label>Which Cliff are you inquiring?</label><br>
     <select>
         <option>West Cliff</option>
