--- a/activities.html
+++ b/activities.html
@@ -1,27 +1,30 @@
 <!DOCTYPE html>
 <html>
 <head>
-      <meta charset="utf-8">
+        <meta charset="utf-8">
         <title>California's Greatest Cliffs</title>
+        <link rel="stylesheet"  href="style.css"> 
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">   
 </head>
-<body>
+<body id="activities">
     <!--Container to wrap everything-->
      <div id="container">
          <header>
-             <img src="images/cliff_ocean.jpg" alt="Ocean View Cliff" width="1280" height="564">
-        <div class="main-header"></div>
-        <div class="logo"></div>
+   <div class="main-header">
         <!--Brand of Website-->
+        <div class="logo">
         <img src="images/logo.png" alt="great cliffs Logo" width="125">
+        </div>
         <!--Main Navigation-->
-        <nav class="Main-Menu">
-        <ul>
-            <li>Home</li>
-            <li>Cliffs</li>
-            <li>Activities</li>
-            <li>Contact</li>
-        </ul>
-     </nav><!--End Main Navigation-->
+        <nav class="main-menu">
+            <ul>
+                <li class="active"><a href="index.html">Home</a></li>
+                <li><a href="cliffs">Cliffs</a></li>
+                <li><a href="activities.html">Activities</a></li>
+                <li><a href="contact.html">Contact</a></li>
+            </ul>
+        </nav><!--End Main Navigation-->
+    </div>
     </header> 
     <!--Main Content-->
  <main>
@@ -85,15 +88,26 @@
      
   
   <section>
-       <ul id="partners"></ul>
-            <liclass="partner">
-               <h3><li>Partner 1 Image</li></h3>
-                <h3><li>Partner 2 Image</li><h3>
-                 <h3><li>Partner 3 Image</li></h3>
-                  <h3><li>Partner 4 Image</li></h3>
-                   <h3><li>Partner 5 Image</li></h3>
-                    <h3><li>Partner 6 Image</li></h3>
-       </ul>
+    <ul id="partners">
+        <li class="partner">
+         <img src="images/partners/partner-bustour.png" alt="Partner Bus Tours">
+     </li>
+         <li class="partner">
+             <img src="images/partners/partner-cabinrental.png" alt="Partner Cabin Rental">
+         </li>
+        <li class="partner">
+             <img src="images/partners/partner-campingadv.png" alt="Partner Camping Adventure">
+         </li>
+        <li class="partner">
+             <img src="images/partners/partner-collegetours.png" alt="Partner College Tours">
+         </li>
+        <li class="partner">
+             <img src="images/partners/partner-rentalbike.png" alt="Partner Bike Rentals">
+         </li>
+        <li class="partner">
+             <img src="images/partners/partner-tourgroup.png" alt="Partner Tour Groups">
+         </li>         
+     </ul>
    </section>
  </main><!--End Main Content-->
 <!--Footer Information-->
