--- a/contact.html
+++ b/contact.html
@@ -110,26 +110,22 @@
           </li>         
       </ul>
      </section>
-<!--Footer Information-->
-   <footer>
-       <div id="nondisclaimer">
-          <div class="copy"> &copy; Copyright 2020 :: GreatCliffs.com</div>
-
-            <p id="disclaimer"></p>
-                
-            <h3 class="social"></h3>
-
-            <section>
-                <ul id="Social Media"></ul>
-                     <liclass="partner">
-                        <h3><li>Facebook Image</li><h3>
-                         <h3><li>Instagram Image</li><h3>
-                          <h3><li>Twitter Image</li></h3>           
-                </ul>
-            </section>
-        <p>This website is designed and created solely for educational purposes only at Westcliff University. All contents are not intended for any commercial gain or use.</p>
-
-   </footer>
-    </container><!--End of Container-->
+  <!--Footer Information-->
+     <footer>
+         <div id="nondisclaimer">
+            <div class="copy"> &copy; Copyright 2020 :: GreatCliffs.com</div>
+      <section>
+      
+                  <div class="social">
+                      <a href="#" class="fa fa-facebook"></a>
+                      <a href="#" class="fa fa-instagram"></a>
+                      <a href="#" class="fa fa-twitter"></a>
+                  </div>
+      </section>
+              <div id="disclaimer">
+              <div><p>This website is designed and created solely for educational purposes only at Westcliff University. All contents are not intended for any commercial gain or use.</p></div> 
+              <h3 class="social"></h3>
+     </footer>
+</div><!--End of Container-->
 </body>
 </html>
