Cliffs page added

--- a/activities.html
+++ b/activities.html
@@ -19,7 +19,7 @@
         <nav class="main-menu">
             <ul>
                 <li class="active"><a href="index.html">Home</a></li>
-                <li><a href="cliffs">Cliffs</a></li>
+                <li><a href="cliffs.html">Cliffs</a></li>
                 <li><a href="activities.html">Activities</a></li>
                 <li><a href="contact.html">Contact</a></li>
             </ul>
@@ -111,7 +111,6 @@
              <div id="nondisclaimer">
                 <div class="copy"> &copy; Copyright 2020 :: GreatCliffs.com</div>
           <section>
-          
                       <div class="social">
                           <a href="#" class="fa fa-facebook"></a>
                           <a href="#" class="fa fa-instagram"></a>
