--- a/cliffs.html
+++ b/cliffs.html
@@ -6,13 +6,13 @@
         <link rel="stylesheet"  href="style.css"> 
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
-<body id="home">
+   <body id="cliffs">
     <!--Container to wrap everything-->
-    <div id="container">
-    <header>
+   <div id="container">
+<header>
    <div class="main-header">   
         <!--Brand of Website-->
-        <div class="logo">
+    <div class="logo">
         <img src="images/logo.png" alt="great cliffs Logo" width="125">
         </div>
         <!--Main Navigation-->
@@ -25,15 +25,12 @@
             </ul>
         </nav><!--End Main Navigation-->
     </div>
-    </header> 
+ </header> 
      <!--Main Content-->
  <main>
-     <h1>Introducing California's Greatest Cliffs</h1>
-     <h2>What is so unique about California cliffs?</h2>
-        <p>California cliffs are one of a kind in the United Sates where no cliffs are as manificent and beautiful as them. And California is the only state that have cliffs that fronts all possible environments: sea, river, mountains and canyons. There are four such individual unique cliffs: West Cliff, North Cliff, East Cliff, South Cliff. All offer fantastic overlooking views, recretional areas, camping sites, wildlife watch spots and overnight cabins.</p>
-     
-     <h2>Where are these Cliffs?</h2>
-        <p>Located within a 100 mile radius from Irvine, California, they can be reached by roads easily. The closest cliff to Irvine is West Cliff, which is the most popular and most visited.</p>
+     <h1>California's Greatest Cliffs</h1>
+        <p>The greatest cliffs are these four cliffs located in southern California. Each of these cliffs have their own uniqueness and beauty: West Cliff, North Cliff, East Cliff and South Cliff are the pride of California. Each cliff has many amenities to offer visitors such as recreational areas, camping sites, wildlife watch spots and overnight cabins.</p>
+        <p>No matter which direction you head from Irvine, California, the sites are easily reached within a 100 mile radius. West Cliff is the most popular among Westcliff University campus students because of its close proximity.</p>
   </main> <!-- End of Main Content-->
   <section>
   <ul id="partners">
