cliff page finished

--- a/cliffs.html
+++ b/cliffs.html
@@ -31,6 +31,24 @@
      <h1>California's Greatest Cliffs</h1>
         <p>The greatest cliffs are these four cliffs located in southern California. Each of these cliffs have their own uniqueness and beauty: West Cliff, North Cliff, East Cliff and South Cliff are the pride of California. Each cliff has many amenities to offer visitors such as recreational areas, camping sites, wildlife watch spots and overnight cabins.</p>
         <p>No matter which direction you head from Irvine, California, the sites are easily reached within a 100 mile radius. West Cliff is the most popular among Westcliff University campus students because of its close proximity.</p>
+        <section class="cliffs">    
+            <div class="site">
+                    <h3>West Cliffs</h3> 
+                    <img src="images/cliff-west-sea.jpg" alt="cliff-west-sea" class="img-set">
+                </div> 
+                <div class="site">
+                    <h3>North Cliffs</h3> 
+                    <img src="images/cliff-north-mountain.jpg" alt="cliff-west-sea" class="img-set">
+                </div> 
+                <div class="site">
+                    <h3>East Cliffs</h3>
+                    <img src="images/cliff-east-river.jpg" alt="cliff-west-sea" class="img-set">
+                </div> 
+                <div class="site">
+                    <h3>South Cliffs</h3> 
+                    <img src="images/cliff-south-canyon.jpg" alt="cliff-west-sea" class="img-set">
+                </div>
+        </section>
   </main> <!-- End of Main Content-->
   <section>
   <ul id="partners">
