--- a/index.html
+++ b/index.html
@@ -10,19 +10,19 @@
     <!--Container to wrap everything-->
     <div id="container">
     <header>
-   <div class="main-header">   
+    <div class="main-header">   
         <!--Brand of Website-->
         <div class="logo">
         <img src="images/logo.png" alt="great cliffs Logo" width="125">
         </div>
         <!--Main Navigation-->
         <nav class="main-menu">
-            <ul>
-                <li class="active"><a href="index.html">Home</a></li>
-                <li><a href="cliffs.html">Cliffs</a></li>
-                <li><a href="activities.html">Activities</a></li>
-                <li><a href="contact.html">Contact</a></li>
-            </ul>
+                <ul>
+                    <li class="active"><a href="index.html">Home</a></li>
+                    <li><a href="cliffs.html">Cliffs</a></li>
+                    <li><a href="activities.html">Activities</a></li>
+                    <li><a href="contact.html">Contact</a></li>
+                </ul>
         </nav><!--End Main Navigation-->
     </div>
     </header>
@@ -65,14 +65,13 @@
    <footer>
        <div id="nondisclaimer">
           <div class="copy"> &copy; Copyright 2020 :: GreatCliffs.com</div>
-    <section>
-    
+        <section>
                 <div class="social">
                     <a href="#" class="fa fa-facebook"></a>
                     <a href="#" class="fa fa-instagram"></a>
                     <a href="#" class="fa fa-twitter"></a>
                 </div>
-    </section>
+        </section>
             <div id="disclaimer">
             <div><p>This website is designed and created solely for educational purposes only at Westcliff University. All contents are not intended for any commercial gain or use.</p></div> 
             <h3 class="social"></h3>
@@ -80,15 +79,14 @@
 </div><!--End of Container-->
 <!--JavaScript Codes-->
 <script>
-    //Create a time data function
-    function currentTime() {
+   //Create a time data function
+   function currentTime() {
         //Declare variables
         var d = new Date(); //Get current date
         var hr = d.getHours(); //Get current hours
         var min = d.getMinutes(); //Get current minutes
         var sec = d.getSeconds(); //Get current seconds
         var ampm; //Declare empty variable to store AM or PM
-    }
     //Add 0 to single digits for seconds
     if (sec < 10) {
         sec = "0" + sec;
@@ -106,14 +104,18 @@
     }   else {
         ampm = "AM"; //Set to AM
     }
-    //Assemble time format to display
-    var time = hr + ":" + min + ":" + sec + " " + ampm;
+        //Assemble time format to display
+        var time = hr + ":" + min + ":" + sec + " " + ampm;
 
-    //Display current local time and time zone on HTML elements
-    document.getElementById("clock").innerText = time; //adding time
-    
-    //Run time data function every 1 second
-    setInterval(currentTime, 1000); //setting timer
-</script>
+        //Display current local time and time zone on HTML elements
+        document.getElementById("clock").innerText = time; //adding time
+        //Initial run of time data function
+        //Run time data function every 1 second
+        setInterval(currentTime, 1000); //setting timer
+     }
+        //Initial run of time data function
+        currentTime();
+
+    </script>
 </body>
 </html>
