--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
         imageList.push(image); // Store the fully assemble code of each image list
       }
       // Display all six image codes store in the array
-      document.getElementById("partners").innerHTML = imageList;
+      document.getElementById("partners").innerHTML = imageList.join("");
     </script>
 </body>
 </html>
