--- a/contact.html
+++ b/contact.html
@@ -48,7 +48,7 @@
         </div>
     </div>
     
-    <form action="/contact" method="post">  
+    <form action="/contact" onLoad="disableButton">  
     <fieldset>  
         <legend>Contact Form</legend>
         <div class="textbox">
