--- a/activities.html
+++ b/activities.html
@@ -90,6 +90,17 @@
             </tr>
             </tfoot>
         </table><!--End of Table-->
+
+        <div id = "displaySelected">
+            <div id = "result">
+                <h4>My selected activities to enquire:</h4>
+            </div>
+            <div id = "sendinfo">
+                <input type = "email" placeholder = "johndoe@gmail.com">
+                <button>Get Info</button>
+            </div>
+        </div>
+
      </main><!--End Main Content-->
      <section>
         <ul id="partners">
